@@ -1,3 +1,8 @@
+2006-01-03  Richard Guenther  <rguenther@suse.de>
+
+	PR c/25183
+	* gcc.dg/torture/pr25183.c: New testcase.
+
 2006-01-03  Jakub Jelinek  <jakub@redhat.com>
 
 	Merge from gomp-branch.
